{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "3fab154c-0329-437d-aa69-426c322f82dd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "03d76fef-33bf-4d11-99b8-ecf61a072e6e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "649c9be1-ffa3-4897-a8d9-a398b89e8f58",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraLooking",
                    "type": "Button",
                    "id": "a283e1e2-eb3e-4945-91c3-c6be26882691",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "cbcb8cd5-6d48-4c64-a844-7d487d6c3837",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1fc985e2-329e-4420-b336-a30eadcd183c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c6ebb515-c134-419b-93c3-e5bbf607b316",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "44b91d98-e1ce-4ccb-b5f4-2489fad593dc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6922997b-626d-4020-afea-293e2899f619",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b3fdceb4-c255-4748-a8ed-79c2afd3981d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ea08bd4-d50c-4208-bd13-a013126f60b3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLooking",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "e0c1e3cc-18a2-4c03-a353-85ce41881816",
            "actions": [
                {
                    "name": "Shift",
                    "type": "Button",
                    "id": "1251f0c3-5ac1-475d-b7b7-71016c5d2874",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "c10f7cfa-7e76-45b6-a0ca-c4bd80d38ab8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrowPokeBall",
                    "type": "Button",
                    "id": "0b91cb28-b385-4b62-bf8b-a38a7c7026b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8259b3c2-86bd-4b6d-a132-3ec3250fb7e2",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a94cbaaf-1657-4e68-b543-ce3ac39669a4",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00213001-ec20-4f44-b3ba-8e369d383008",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowPokeBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}